@@ -1,3 +1,8 @@
+2007-11-15  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tclWin32Dll.c: Prefer UINT_PTR to DWORD_PTR when casting
+	pointers to integer types for greater portability (bug #1831253)
+
 2007-11-15  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/Tcl.xcodeproj/project.pbxproj: add new chanio.test.
